# CodeChallenge.A3.Painkiller

./: Dockerfile  Makefile  README.md  docker-compose.yaml  microsservices.pmul  nginx_config._conf  nginx_config.conf
app/db/: models.py
app/migrations/: env.py
app/migrations/versions/: d94efd940ee3_add.py
measurement_service/: Dockerfile  requirements.txt
measurement_service/app/: main.py  middleware.py
measurement_service/app/db/: models.py
measurement_service/app/migrations/: env.py
measurement_service/app/migrations/versions/: e12cbd21dd56_add.py
measurement_service/app/routes/: deps.py  measures_routes.py
measurement_service/app/schemas/: base.py  measures.py
measurement_service/app/test/: conftest.py
measurement_service/app/usecases/: measurements.py  queue_message.py
patient_service/: Dockerfile  pyproject.toml
patient_service/app/: exception_handlers.py  main.py
patient_service/app/db/: connection.py  models.py
patient_service/app/migrations/versions/: b78918286037_add.py  d349477c08dd_update.py
patient_service/app/routes/: patient_routes.py
patient_service/app/schemas/: measures.py  patient.py
patient_service/app/test/: conftest.py
patient_service/app/test/routes/: test_patient_routes.py
patient_service/app/test/schema/: test_patient_schema.py
patient_service/app/test/use_cases/: test_patient_usecase.py
patient_service/app/usecases/: measurement.py  patient.py  queue_message.py
patient_service/app/utils/: format_helper.py
patient_service/uml/: class-diagram.wsd
uml/usecases/: patient.usecase.wsd
(+3 files in other folders)
