[tool.poetry]
name = "painkiller_ms"
version = "0.1.0"
description = ""
authors = ["cgalmeida <carolinagalmeida.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
alembic = "^1.11.1"
python-decouple = "^3.8"
httpx = "^0.24.1"
prometheus-client = "^0.17.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
starlette-exporter = "^0.16.0"
configloader = "^1.0.1"
pyyaml = "^6.0.1"
grpcio-tools = ">=1.30,<2.0"
pika = "^1.3.2"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
